[package]
name = "phantom-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
thiserror = "2.0.12"
log = "0.4.27"
uniffi = { version = "0.29.2", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.2", features = [ "build" ] }

[[bin]]
name = "phantom-bindgen"
path = "phantom-bindgen.rs"
