[package]
name = "phantom-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
thiserror = "2.0.12"
log = { version = "0.4.27", features = [ "std" ] }
uniffi = { version = "0.29.2", features = [ "cli" ] }
once_cell = "1.21.3"
tokio-util = "0.7.15"
futures = "0.3.31"
socket2 = "0.5.10"
rand = "0.9.1"

[build-dependencies]
uniffi = { version = "0.29.2", features = [ "build" ] }

[[bin]]
name = "phantom-bindgen"
path = "phantom-bindgen.rs"
